--- a/package.json
+++ b/package.json
@@ -464,7 +464,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "test.git"
+    "url": "https://github.com/1903514970/cordova-plugin-demotoast.git"
   },
   "keywords": [
     "cordova",
